# gpu_hdr_pipeline

./: .drone.yml  .gitattributes  .gitignore  README.md  bashenv.sh
assets/: 1048576_42.particles  12345_42.particles  12345_42_side.particles  12345_42b.particles  12345_42b_side.particles  123_42.particles  123_42_side.particles  123_42b.particles  123_42b_side.particles  LA_Downtown_Afternoon_Fishing_3k.hdr  README.txt
assets/ref/task4a/: 12345_42.particlereplay  12345_42_side.particlereplay  123_42.particlereplay  123_42_side.particlereplay
assets/ref/task4b/: 12345_42b.particlereplay  12345_42b_side.particlereplay  123_42b.particlereplay  123_42b_side.particlereplay
src/: CMakeLists.txt
src/hdr_pipeline/: CMakeLists.txt  GLRenderer.cpp  GLRenderer.h  GLScene.cpp  GLScene.h  HDRDemo.cpp  HDRDemo.h  HDRPipeline.cpp  HDRPipeline.h  InputHandler.cpp  InputHandler.h  bloom_kernel.h  envmap.cpp  envmap.h  hdr_pipeline.cu  main.cpp  run_interactive.cpp  run_noninteractive.cpp
src/hdr_pipeline/GLSL/: camera  env.fs.glsl  env.vs.glsl  envmap  fullscreen_triangle.fs.glsl  fullscreen_triangle.vs.glsl  model.fs.glsl  model.vs.glsl
src/particles/: CMakeLists.txt  CUDAParticles.cpp  CUDAParticles.h  GLBoundingBox.cpp  GLBoundingBox.h  GLCUDAParticleDemo.cpp  GLCUDAParticles.cpp  GLCUDAParticles.h  GLNoCUDAParticleDemo.cpp  GLParticleDemo.cpp  GLParticleDemo.h  GLParticlePipeline.cpp  GLParticlePipeline.h  GLParticleReplay.cpp  GLParticleReplay.h  GLRenderer.cpp  GLRenderer.h  GLScene.cpp  GLScene.h  InputHandler.cpp  InputHandler.h  NoGLCUDAParticleDemo.cpp  ParticleDemo.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemLoader.h  main.cpp  particle_system_state.cpp  particle_system_state.h  particles.cu
src/particles/GLSL/: bounding_box.fs.glsl  bounding_box.vs.glsl  particle.fs.glsl  particle.gs.glsl  particle.vs.glsl
src/utils/: CMakeLists.txt  Camera.h  Navigator.h  OrbitalNavigator.cpp  OrbitalNavigator.h  PerspectiveCamera.cpp  PerspectiveCamera.h  argparse.cpp  argparse.h  dynamic_library.h  image.h  image_io.h  io.h  obj.cpp  obj.h  obj_reader.h  obj_stream.h  pfm.cpp  pfm.h  png.cpp  png.h  radiance.cpp  radiance.h  screenshot.cpp  screenshot.h
src/utils/CUDA/: CMakeLists.txt  array.h  device.cpp  device.h  error.cpp  error.h  event.h  graphics_gl_interop.h  graphics_interop.h  memory.h
src/utils/GLSL/: CMakeLists.txt  camera
src/utils/io/: compression.cpp  compression.h  obj.cpp  obj_reader.h  obj_stream.h  pfm.cpp  pfm.h  png.cpp  png.h  radiance.cpp
src/utils/math/: math.h  matrix.h  test.cpp  vector.h
